~ move gradle test settings to separate files